fixed navbar color issue and 1 text alignment issue

--- a/assets/css/score-board.css
+++ b/assets/css/score-board.css
@@ -59,3 +59,6 @@ th,
 td {
 	text-align: center;
 }
+.sidenav {
+	background-color: #00acc1;
+}
