--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,10 +50,13 @@ nav ul a {
 	display: block;
 	background-color: #00acc1;
 }
-@media (max-width: 767px) {
+@media screen and (max-width: 507px) {
 	.col {
 		width: 50%;
 		margin: 0 auto;
+	}
+	.nav .brand-logo.center {
+		font-size: 20px;
 	}
 }
 .sidenav li > a {
@@ -64,4 +67,11 @@ nav ul a {
 
 h4 {
 	text-align: center;
+}
+nav .brand-logo {
+	height: 0;
+}
+
+.sidenav {
+	background-color: #00acc1;
 }
